# database-mechanics

./: .gitignore  DEVELOPMENT.md  Makefile  README.md
java/: .gitignore  README.md  pom.xml
java/src/main/java/com/anirudhology/databasemechanics/index/btree/: BTree.java  BTreeNode.java  KeyValuePair.java
java/src/test/java/com/anirudhology/databasemechanics/: BasicTest.java
java/src/test/java/com/anirudhology/databasemechanics/index/btree/: BTreeTest.java
java/src/test/java/com/databasemechanics/: BasicTest.java
python/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.py  simple_test.py
python/src/database_mechanics/: __init__.py
python/src/database_mechanics/indexing/btree/: btree_index.py  btree_node.py  key_value_pair.py
python/tests/: conftest.py  test_basic.py  test_btree_index.py  test_btree_node.py  test_btree_performance.py  test_key_value_pair.py
